...
            "state" : "translated",
            "value" : "Не удаётся прочитать эту папку"
          }
        }
      }
    },
    "Check for Updates…" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Проверить обновления…"
          }
...
            "state" : "translated",
            "value" : "Дата изменения"
          }
        }
      }
    },
    "Delete" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Удалить"
          }
...
            "state" : "translated",
            "value" : "Удалить…"
          }
        }
      }
    },
    "Devices" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Устройства"
          }
        }
      }
    },
    "Diagnostics Copied" : {
      "localizations" : {
...
            "state" : "translated",
            "value" : "Оставить оба"
          }
        }
      }
    },
    "Kind" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Тип"
          }
        }
      }
    },
    "List" : {
      "localizations" : {
...
    },
    "New Folder" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Новая папка"
          }
        }
      }
    },
    "No Storage Available" : {
      "localizations" : {
...
            "state" : "translated",
            "value" : "Всё ещё занят. Завершите «Захват изображений» и «Фото»."
          }
        }
      }
    },
    "Tether" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tether"
          }
...
            "state" : "translated",
            "value" : "Это действие нельзя отменить."
          }
        }
      }
    },
    "Transfers" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Передачи"
          }
...
            "state" : "translated",
            "value" : "Обновление…"
          }
        }
      }
    },
    "Upload" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Загрузить на телефон"
          }
...
